--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,45 +2,42 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    signingConfigs {
-        release {
-            keyAlias ''
-            keyPassword ''
-            storeFile file('/Users/avjindersinghsekhon/androidapps.jks')
-            storePassword ''
-        }
-    }
-    compileSdkVersion 23
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    buildToolsVersion "29.0.2"
+
     defaultConfig {
-        applicationId "com.avjindersinghsekhon.minimaltodo"
-        minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 3
-        versionName "1.2"
+        applicationId "com.appmob.klast"
+        minSdkVersion 19
+        targetSdkVersion 29
+        versionCode 1
+        versionName "1.0"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/'] } }
-    lintOptions {
-        abortOnError false
-    }
+
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.android.gms:play-services-analytics:7.8.0'
-    implementation 'uk.co.chrisjenx:calligraphy:2.1.0'
-    implementation 'com.github.ganfra:material-spinner:1.1.0'
-    implementation 'com.wdullaer:materialdatetimepicker:1.5.1'
-    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
-    implementation 'com.github.ganfra:material-spinner:1.1.0'
-    implementation 'com.android.support:recyclerview-v7:23.1.0'
-    implementation 'com.android.support:design:23.1.0'
-    implementation 'com.android.support:appcompat-v7:23.1.0'
-    implementation 'com.android.support:support-v13:23.1.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.firebase:firebase-auth:19.2.0'
 }
